@@ -43,13 +43,15 @@ clean:
 user:
 	groupadd -f prometheus
 	if ! getent passwd prometheus; then \
-		useradd -d $(HOMEDIR) -g prometheus -s /bin/false prometheus \
+		useradd -d $(HOMEDIR) -g prometheus -s /bin/false prometheus; \
 	fi
 
 install: all update
-	if ! (getent group prometheus && getent passwd prometheus); then \
-		echo The prometheus user and/or group is/are missing! \
-		false \
+	if ! (getent group prometheus >/dev/null && \
+	      getent passwd prometheus >/dev/null); then \
+		echo The prometheus user and/or group is/are missing!; \
+		echo Run \'make user\' to add them.; \
+		false; \
 	fi
 	$(INSTALL_DIR_HOME) $(HOMEDIR)/backup
 	$(INSTALL_DIR_HOME) $(HOMEDIR)/build
