@@ -1,5 +1,6 @@
 2006-01-28 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
+	* Makefile: Fixed some syntax errors.
 	* profiles/lfs-6.1/man-pages: Added a missing quote.
 
 2006-01-28 Gareth Jones <gareth_jones@users.berlios.de>
